# snowlite

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  install.ps1  install.sh  release-plz.toml
.claude/commands/: merge-pr.md  new-change.md
.github/workflows/: ci.yml  release-binaries.yml  release.yml
docs/: architecture.md  configuration.md  http-server.md  limitations.md  supported-sql.md
src/: connection.rs  lib.rs  row.rs
src/translator/: functions.rs  identifiers.rs  noop.rs  rewriter.rs  types.rs
tests/: integration_tests.rs  server_tests.rs
