[package]
name = "snowlite"
version = "0.2.0"
edition = "2021"
publish = false
description = "Local SQLite-backed driver that acts as an in-place replacement for Snowflake in integration tests"
license = "MIT"
repository = "https://github.com/cvrajeesh/snowlite"
keywords = ["snowflake", "sqlite", "testing", "database", "driver"]
categories = ["database", "development-tools::testing"]

[lib]
name = "snowlite"
path = "src/lib.rs"

[[bin]]
name = "snowlite-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
server = ["axum", "tokio", "uuid", "tower-http"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Server dependencies (optional, behind "server" feature)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tower-http = { version = "0.5", features = ["decompression-gzip"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
env_logger = "0.11"
tempfile = "3"
serde_json = "1.0"
# Server test utilities (axum/tokio come from [dependencies] via the "server" feature)
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "server_tests"
path = "tests/server_tests.rs"
required-features = ["server"]

[profile.release]
opt-level = 3
lto = true
